--- a/blogpost.html
+++ b/blogpost.html
@@ -9,7 +9,8 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            cabecera 
+            hyperblog
+            <span id="tagline"> Tu bloc de confianza</span>
         </div>
         <div id="post">
             <h1>este es el titulo atractivo e interesante del post</h1>
