agregado continedo addciona del blog y mejor tipografia

--- a/blogpost.html
+++ b/blogpost.html
@@ -13,7 +13,11 @@
         <p>y este es el parrafo de inicio donde vamos a explicar
             las cosas increibles que se pueden hacer con ramas
         </p>
-
+        <p> Los blog son la mejor forma de compartir informacion
+            y tus ideas .muchos mas que ir conferencias o salir en you
+            tube   Excepto si eres un rockstar.Pero estadisticamente
+            no lo eres .... por ahora 
+        </p>
         </div>
         
     </div>
