--- a/blogpost.html
+++ b/blogpost.html
@@ -10,7 +10,7 @@
     <div id="container">
         <div id="cabecera">
             hyperblog
-            <span id="tagline"> Tu bloc de confianza</span>
+            <span id="tagline">Tu bloc de cabecera</span>
         </div>
         <div id="post">
             <h1>este es el titulo atractivo e interesante del post</h1>
