--- a/blogpost.html
+++ b/blogpost.html
@@ -10,7 +10,7 @@
     <div id="container">
         <div id="cabecera">
             hyperblog
-            <span id="tagline"> Tu bloc de confianza</span>
+            <span id="tagline"> Tu bloc de Maestro</span>
         </div>
         <div id="post">
             <h1>este es el titulo atractivo e interesante del post</h1>
@@ -22,6 +22,7 @@
             tube   Excepto si eres un rockstar.Pero estadisticamente
             no lo eres .... por ahora 
         </p>
+        <p>Subcribete y dale like </p>
         </div>
         
     </div>
