Cambio para ver si va online

--- a/blogpost.html
+++ b/blogpost.html
@@ -23,6 +23,7 @@
             no lo eres .... por ahora 
         </p>
         <p>Subcribete y dale like </p>
+        <p>Nuevos cambios para el internet </p>
         </div>
         
     </div>
