--- a/blogpost.html
+++ b/blogpost.html
@@ -24,6 +24,7 @@
         </p>
         <p>Subcribete y dale like </p>
         <p>Nuevos cambios para el internet </p>
+            <p> SI LLEGARON </p>
         </div>
         
     </div>
