--- a/blogpost.html
+++ b/blogpost.html
@@ -14,7 +14,7 @@
             <span id="tagline">Tu bloc de cabecera</span>
         </div>
         <div id="post">
-            <h1>este es el titulo atractivo e interesante del post</h1>
+            <h1>Este es el Titulo atractivo e interesante del post</h1>
         <p>y este es el parrafo de inicio donde vamos a explicar
             las cosas increibles que se pueden hacer con ramas
         </p>
