cambio al tagline y color del footer

--- a/blogpost.html
+++ b/blogpost.html
@@ -11,7 +11,7 @@
         <div id="cabecera">
             <img id="logo" src="imagenes/dragon.png">
             hyperblog
-            <span id="tagline">Tu bloc de cabecera</span>
+            <span id="tagline">Tu bloc de Confianza</span>
         </div>
         <div id="post">
             <h1>Este es el Titulo atractivo e interesante del post</h1>
